Changelog
=========


2.0.7 (unreleased)
------------------

- Nothing changed yet.


2.0.6 (2020-05-28)
------------------

- Significantly optimize freezer's "ignore_modules" by avoiding retrieving the
  complete call stack.
  [buchi]


2.0.5 (2019-12-17)
------------------

- Stop quickinstall_uninstallation test from being skipped on Plone 5.1 [djowett-ftw]
- restore diffs for uninstall tests after removing unittest2 [djowett-ftw]


2.0.4 (2019-12-04)
------------------

- Add missing getToolByName default argument [Nachtalb]


2.0.3 (2019-11-22)
------------------

- Fix pickling of datetime while time is frozen. [buchi]


2.0.2 (2019-11-19)
------------------

- Fix super call to mock_tool. [buchi]


2.0.1 (2019-11-19)
------------------

- Fix component registry tear down in MockTestCase. [buchi]
- Rename FrozenDateTime class to FrozenDatetime to workaround poor check for
  Zope's DateTime in plone.event. [buchi]


2.0.0 (2019-11-11)
------------------

- Add support for Plone 5.2 and Python 3. [buchi]
- No longer base on plone.mocktestcase as it's not compatible with Python 3 and
  replace mocker with unittest.mock. This is a *breaking* change and may
  require amending existing tests based on ``MockTestCase``.
  [buchi]
- Reimplement freezer without forbiddenfruit and mocker. [buchi]


1.20.1 (2019-04-04)
-------------------

- Optimize "ignore_modules" to avoid unneeded stack inspections. [Rotonen]


1.20.0 (2019-01-25)
-------------------

- Add "ignore_modules" support to freezer. [jone]


1.19.2 (2018-11-05)
-------------------

- Fix in timezone aware freezing for Zope DateTime. [njohner]


1.19.1 (2018-10-23)
-------------------

- Fix invalid reST in README.rst [Nachtalb]


1.19.0 (2018-10-15)
-------------------

- Drop support for plone 4.2. [jone]
- Fix bug with getting a timezone aware "now". [njohner]


1.18.0 (2018-07-12)
-------------------

- Extend ``staticuid`` to also be a context manager. [jone]