@@ -5,7 +5,8 @@ Changelog
 2.0.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make freezer's "ignore_modules" more robust.
+  [phgross]
 
 
 2.0.6 (2020-05-28)
